--- a/graph-ddl/build.gradle
+++ b/graph-ddl/build.gradle
@@ -5,8 +5,13 @@
 dependencies {
     compile project(':okapi-trees')
     compile project(':okapi-api')
-    compile 'com.lihaoyi:fastparse_2.11:1.0.0'
+
+    compile group: 'com.lihaoyi', name: "fastparse_$scalaVersion", version: '1.0.0'
+
     testCompile project(':okapi-testing')
+
+
+
 }
 
 task packageTests(type: Jar) {
