--- a/okapi-neo4j-io-testing/build.gradle
+++ b/okapi-neo4j-io-testing/build.gradle
@@ -5,7 +5,8 @@
 dependencies {
     compile project(':okapi-neo4j-io')
     compile project(':okapi-testing')
-    compile 'org.neo4j.test:neo4j-harness:3.4.10'
+
+    compile group: 'org.neo4j.test', name: 'neo4j-harness', version: '3.4.10'
 }
 
 task packageTests(type: Jar) {
