--- a/okapi-neo4j-io/build.gradle
+++ b/okapi-neo4j-io/build.gradle
@@ -4,7 +4,8 @@
 
 dependencies {
     compile project(':okapi-api')
-    compile 'org.neo4j.driver:neo4j-java-driver:1.7.2'
+
+    compile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: '1.7.2'
 }
 
 task packageTests(type: Jar) {
