--- a/okapi-tck/build.gradle
+++ b/okapi-tck/build.gradle
@@ -3,10 +3,11 @@
  */
 
 dependencies {
-    compile 'org.opencypher:tck:1.0.0-M11'
-    compile 'org.opencypher:tck-api:1.0.0-M11'
     compile project(':okapi-testing')
     compile project(':okapi-ir')
+
+    compile group: 'org.opencypher', name: 'tck',     version: '1.0.0-M11'
+    compile group: 'org.opencypher', name: 'tck-api', version: '1.0.0-M11'
 }
 
 task packageTests(type: Jar) {
