--- a/okapi-trees/build.gradle
+++ b/okapi-trees/build.gradle
@@ -3,8 +3,9 @@
  */
 
 dependencies {
-    compile 'org.typelevel:cats-core_2.11:1.0.1'
-    testCompile 'junit:junit:4.12'
+    compile group: 'org.typelevel', name: "cats-core_$scalaVersion", version: '1.0.1'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 task packageTests(type: Jar) {
