--- a/licenses.gradle
+++ b/licenses.gradle
@@ -1,13 +1,93 @@
+// All licenses that we accept, and their aliases
 def whitelist = [
-        apache2 : [name: "Apache Software License, Version 2.0", url: "http://www.apache.org/licenses/LICENSE-2.0"],
-        bsd2    : [name: "The 2-Clause BSD License", url: "http://opensource.org/licenses/BSD-2-Clause"],
-        bsd3    : [name: "The 3-Clause BSD License", url: "http://opensource.org/licenses/BSD-3-Clause"],
-        mit     : [name: "MIT-license", url: "http://opensource.org/licenses/MIT"],
-        mozilla1: [name: "Mozilla Public License, Version 1.1", url: "http://www.mozilla.org/MPL/MPL-1.1.html"],
-        mozilla2: [name: "Mozilla Public License, Version 2.0", url: "http://www.mozilla.org/en-US/MPL/2.0/"],
-        bouncy  : [name: "Bouncy Castle License", url: "https://www.bouncycastle.org/license.html"],
-        pubDom  : [name: "Public-domain", url: ""],
-        eclipse1: [name: "Eclipse Public License 1.0", url: "http://www.eclipse.org/legal/epl-v10.html"],
+        [name: 'BSD-2-Clause', url: 'http://opensource.org/licenses/BSD-2-Clause', aliases: [
+                [name: 'BSD License', url: 'http://javolution.org/LICENSE.txt'],
+                [name: 'BSD-style', url: 'http://www.opensource.org/licenses/bsd-license.php'],
+                [name: 'The BSD License', url: 'http://www.opensource.org/licenses/bsd-license.php'],
+        ]],
+        [name: 'BSD-3-Clause', url: 'http://opensource.org/licenses/BSD-3-Clause', aliases: [
+                [name: 'The BSD 3-Clause License'],
+                [name: 'The 3-Clause BSD License'],
+                [name: 'BSD 3-Clause'],
+                [name: 'BSD 3 Clause'],
+                [name: 'BSD 3-clause'],
+                [name: 'New BSD License'],
+                [name: 'New BSD license'],
+                [name: 'The New BSD License'],
+                [name: 'BSD License', url: 'http://www.antlr.org/license.html'],
+                [name: 'BSD licence', url: 'http://antlr.org/license.html'],
+                [name: 'The BSD License', url: 'http://www.antlr.org/license.html'],
+                [name: 'BSD', url: 'http://asm.ow2.org/license.html'],
+                [name: 'BSD', url: 'http://www.jcraft.com/jsch/LICENSE.txt'],
+                [name: 'BSD', url: 'https://github.com/sbt/test-interface/blob/master/LICENSE'],
+                [name: 'BSD', url: 'LICENSE.txt'],
+                [name: '', url: 'http://asm.ow2.org/license.html'],
+        ]],
+        [name: 'Apache-2.0', url: 'https://opensource.org/licenses/Apache-2.0', aliases: [
+                [name: 'The Apache Software License, Version 2.0'],
+                [name: 'The Apache License, Version 2.0'],
+                [name: 'Apache 2'],
+                [name: 'Apache v2'],
+                [name: 'Apache License, Version 2.0'],
+                [name: 'Apache License, Version 2'],
+                [name: 'Apache Software License - Version 2.0'],
+                [name: 'Apache License 2.0'],
+                [name: 'Apache License'],
+                [name: 'Apache 2.0'],
+                [name: 'Apache-2.0'],
+                [name: 'Apache 2.0 License'],
+                [name: 'ASL'],
+                [name: 'ASL 2.0'],
+                [name: 'the Apache License, ASL Version 2.0'],
+                [name: '', url: 'http://www.apache.org/licenses/LICENSE-2.0.txt'],
+        ]],
+        [name: 'CDDL-1.0', url: 'https://opensource.org/licenses/CDDL-1.0', aliases: [
+                [name: 'COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0'],
+                [name: 'CDDL', url: 'http://www.sun.com/cddl'],
+                [name: 'CDDL License', url: 'http://www.opensource.org/licenses/cddl1.php'],
+
+        ]],
+        [name: 'EPL-1.0', url: 'https://opensource.org/licenses/EPL-1.0', aliases: [
+                [name: 'Eclipse Public License 1.0'],
+                [name: 'Eclipse Public License - Version 1.0'],
+        ]],
+        [name: 'EPL-2.0', url: 'https://opensource.org/licenses/EPL-2.0', aliases: [
+                [name: 'Eclipse Public License v2.0'],
+        ]],
+        [name: 'MIT', url: 'https://opensource.org/licenses/MIT', aliases: [
+                [name: 'MIT'],
+                [name: 'MIT license'],
+                [name: 'MIT License'],
+                [name: 'The MIT License'],
+                [name: 'Bouncy Castle Licence'],
+        ]],
+        [name: 'MPL-1.0', url: 'https://opensource.org/licenses/MPL-1.0', aliases: [
+        ]],
+        [name: 'MPL-1.1', url: 'https://opensource.org/licenses/MPL-1.1', aliases: [
+                [name: 'MPL 1.1'],
+        ]],
+        [name: 'MPL-2.0', url: 'https://opensource.org/licenses/MPL-2.0', aliases: [
+                [name: 'Mozilla Public License, Version 2.0'],
+                [name: 'MPL 2.0 or EPL 1.0'],
+                [name: 'MPL', url: 'http://www.mozilla.org/MPL/2.0/index.txt'],
+                [name: 'Mozilla Public License, v. 2.0', url: 'http://mozilla.org/MPL/2.0/']
+        ]],
+        [name: 'CDDL-1.1+GPL-2.0+CPE', url: 'https://javaee.github.io/glassfish/LICENSE', aliases: [
+                [name: 'CDDL + GPLv2 with classpath exception'],
+                [name: 'CDDL 1.1', url: 'https://glassfish.java.net/public/CDDL+GPL_1_1.html'],
+                [name: 'CDDL 1.1', url: 'https://glassfish.dev.java.net/public/CDDL+GPL_1_1.html'],
+                [name: 'CDDL 1.1', url: 'http://glassfish.java.net/public/CDDL+GPL_1_1.html'],
+                [name: 'CDDL+GPL License', url: 'http://glassfish.java.net/public/CDDL+GPL_1_1.html'],
+                [name: 'GPL2 w/ CPE', url: 'http://glassfish.java.net/public/CDDL+GPL_1_1.html'],
+                [name: 'GPL2 w/ CPE', url: 'https://glassfish.dev.java.net/public/CDDL+GPL_1_1.html'],
+                [name: 'GPL2 w/ CPE', url: 'https://glassfish.java.net/public/CDDL+GPL_1_1.html'],
+                [name: 'GPLv2+CE', url: 'https://glassfish.java.net/public/CDDL+GPL_1_1.html'],
+        ]],
+        [name: 'Public-domain', url: 'https://wiki.creativecommons.org/wiki/Public_domain', aliases: [
+                [name: 'Public domain'],
+                [name: 'Public Domain'],
+
+        ]],
 ]
 
 
@@ -16,7 +96,7 @@ allprojects {
 
     // License header checking and insertion
     license {
-        header = file("$rootDir/licensecheck-config/src/main/resources/NOTICE-header.txt")
+        header = rootProject.file("licensecheck-config/src/main/resources/NOTICE-header.txt")
         // https://github.com/hierynomus/license-gradle-plugin/issues/145
         // exclude 'test/resources/**'
         // exclude 'main/resources/**'
@@ -25,89 +105,33 @@ allprojects {
     }
 
 
-    // Dependency license report
+    // Dependency license reporting
     downloadLicenses {
 
-        def lic = whitelist.collectEntries { k, v -> [(k): license(v.name, v.url)] }
+        dependencyConfiguration = 'compile'
 
-        // licenses = [
-        // ]
-
-        aliases = [
-                (lic.apache2) : [
-                        'The Apache Software License, Version 2.0',
-                        'The Apache License, Version 2.0',
-                        'Apache 2',
-                        'Apache v2',
-                        'Apache License, Version 2.0',
-                        'Apache License, Version 2',
-                        'Apache Software License - Version 2.0',
-                        'Apache License 2.0',
-                        'Apache License',
-                        'Apache 2.0',
-                        'Apache-2.0',
-                        'Apache 2.0 License',
-                        'ASL',
-                        'ASL 2.0',
-                        'the Apache License, ASL Version 2.0',
-                        license('', 'http://www.apache.org/licenses/LICENSE-2.0.txt'),
-                ],
-
-                (lic.bsd2)    : [
-                        license('BSD License', 'http://javolution.org/LICENSE.txt'),
-                        license('BSD-style', 'http://www.opensource.org/licenses/bsd-license.php'),
-                ],
-
-                (lic.bsd3)    : [
-                        'The BSD 3-Clause License',
-                        'The 3-Clause BSD License',
-                        'BSD 3-Clause',
-                        'BSD 3 Clause',
-                        'BSD 3-clause',
-                        'New BSD License',
-                        'New BSD license',
-                        'The New BSD License',
-                        license('BSD License', 'http://www.antlr.org/license.html'),
-                        license('BSD licence', 'http://antlr.org/license.html'),
-                        license('The BSD License', 'http://www.antlr.org/license.html'),
-                        license('BSD', 'http://asm.ow2.org/license.html'),
-                        license('BSD', 'http://www.jcraft.com/jsch/LICENSE.txt'),
-                        license('BSD', 'https://github.com/sbt/test-interface/blob/master/LICENSE'),
-                        license('', 'http://asm.ow2.org/license.html'),
-                        license('BSD', 'LICENSE.txt'),
-                ],
-
-                (lic.eclipse1): [
-                        license('Eclipse Public License - Version 1.0', 'http://www.eclipse.org/org/documents/epl-v10.php'),
-                ],
-
-                (lic.mit)     : [
-                        'MIT',
-                        'MIT license',
-                        'MIT License',
-                        'The MIT License'
-                ],
-
-                (lic.mozilla1): [
-                        'MPL 1.1',
-                ],
-
-                (lic.mozilla2): [
-                        'Mozilla Public License, v. 2.0',
-                        license('MPL', 'http://www.mozilla.org/MPL/2.0/index.txt'),
-                ],
-
-                (lic.bouncy)  : [
-                        'Bouncy Castle Licence',
-                ],
-
-                (lic.pubDom)  : [
-                        'Public domain',
-                        'Public Domain',
-                ],
+        licenses = [
+                'org.antlr:antlr-runtime:3.4'              : 'BSD-3-Clause', // https://www.antlr3.org/license.html
+                'asm:asm:3.1'                              : 'BSD-3-Clause', // https://gitlab.ow2.org/asm/asm/blob/master/LICENSE.txt
+                'commons-beanutils:commons-beanutils:1.7.0': 'Apache-2.0', // http://commons.apache.org/proper/commons-beanutils/
+                'oro:oro:2.0.8'                            : 'Apache-2.0', // https://mvnrepository.com/artifact/oro/oro/2.0.8
+                'org.codehaus.jettison:jettison:1.1'       : 'Apache-2.0', // https://github.com/codehaus/jettison/tree/jettison-1.1
+                'org.apache.zookeeper:zookeeper:3.4.6'     : 'Apache-2.0', // https://github.com/apache/zookeeper/tree/branch-3.4
+                'org.apache.xbean:xbean-asm5-shaded:4.4'   : 'Apache-2.0', // https://mvnrepository.com/artifact/org.apache.xbean/xbean-asm5-shaded/4.4
+                'javax.servlet:servlet-api:2.5'            : 'CDDL-1.1+GPL-2.0+CPE', // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+                'javax.transaction:jta:1.1'                : 'CDDL-1.1+GPL-2.0+CPE', // https://github.com/javaee/javax.transaction/blob/master/LICENSE
+                'javax.servlet.jsp:jsp-api:2.1'            : 'CDDL-1.1+GPL-2.0+CPE', // https://javaee.github.io/javaee-jsp-api/LICENSE
         ]
-    }
 
+        aliases = whitelist.collectEntries { lic ->
+            def actual = license(lic.name, lic.url)
+            def alternatives = lic.aliases.collect { it.url ? license(it.name, it.url) : it.name }
+            [(actual): alternatives]
+        }
+    }
+}
+
+subprojects {
     // Dependency license validation
     task validateLicenses {
         group 'license'
@@ -122,12 +146,23 @@ allprojects {
             errFile.text = ""
 
             json.licences
-                    .findAll { lic -> !whitelist.values().any { lic.name == it.name } }
+                    .findAll { lic -> !whitelist.any { lic.name == it.name } }
+                    .sort { lic -> lic.name }
                     .each { lic -> logger.error("The license '$lic.name' is not in the license whitelist. Details: ${lic.toMapString()}") }
-                    .each { lic -> errFile << '\n' << "license('$lic.name', '$lic.url') // $lic.dependencies" }
+                    .each { lic -> errFile << '\n' << lic.toMapString() }
                     .each { lic -> throw new GradleException("The license '$lic.name' is not in the license whitelist") }
         }
     }
 }
 
-
+// Disable dependency license validation on test projects
+[
+        'okapi-tck',
+        'okapi-testing',
+        'okapi-neo4j-io-testing',
+        'spark-cypher-examples',
+        'spark-cypher-tck',
+        'spark-cypher-testing',
+].each {
+    project(it).tasks.validateLicenses.enabled = false
+}
