--- a/build.gradle
+++ b/build.gradle
@@ -3,20 +3,13 @@ plugins {
 }
 
 allprojects {
-
-    group = 'org.opencypher'
+    group   = 'org.opencypher'
     version = '0.2.3-SNAPSHOT'
-
 }
 
 subprojects {
     apply plugin: 'scala'
-    apply plugin: 'maven-publish'
 
-    task dependencySearch(type: DependencyInsightReportTask) {
-        description 'Searches all projects for a dependency'
-        group 'help'
-    }
     repositories {
         mavenLocal()
         mavenCentral()
@@ -63,6 +56,16 @@ subprojects {
     task sourceJar(type: Jar) {
         classifier = 'sources'
         from(sourceSets.main.allSource)
+    }
+
+    task testJar(type: Jar) {
+        classifier = 'tests'
+        from(sourceSets.test.output)
+    }
+
+    task dependencySearch(type: DependencyInsightReportTask) {
+        description 'Searches all projects for a dependency'
+        group 'help'
     }
 }
 
