Create shadowJar for spark-cypher and add to publication

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id "com.github.hierynomus.license" version "0.15.0"
+    id "com.github.hierynomus.license"   version "0.15.0" apply false
+    id 'com.github.johnrengelman.shadow' version '4.0.3'  apply false
 }
 
 allprojects {
