--- a/graph-ddl/build.gradle
+++ b/graph-ddl/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     compile project(':okapi-trees')
     compile project(':okapi-api')
 
-    compile group: 'com.lihaoyi', name: "fastparse_$scalaVersion", version: '1.0.0'
+    compile group: 'com.lihaoyi', name: "fastparse".scala(), version: ver.fastparse
 
     testCompile project(':okapi-testing')
 }
