--- a/okapi-api/build.gradle
+++ b/okapi-api/build.gradle
@@ -4,15 +4,15 @@ description = 'Okapi - openCypher API'
 dependencies {
     compile project(':okapi-trees')
 
-    compile(group: 'org.opencypher', name: 'front-end-9.0', version: '9.0.20181030') {
+    compile(group: 'org.opencypher', name: 'front-end-9.0', version: ver.cypher.frontend) {
         exclude group: 'org.scalatest',  module: 'scalatest_2.11'
         exclude group: 'org.scalacheck', module: 'scalacheck_2.11'
     }
 
-    compile group: 'org.typelevel',  name: "cats-core_$scalaVersion", version: '1.0.1'
-    compile group: 'com.lihaoyi',    name: "upickle_$scalaVersion",   version: '0.6.6'
-    compile group: 'com.lihaoyi',    name: "fastparse_$scalaVersion", version: '1.0.0'
+    compile group: 'org.typelevel',  name: "cats-core".scala(), version: ver.cats
+    compile group: 'com.lihaoyi',    name: "upickle".scala(),   version: ver.upickle
+    compile group: 'com.lihaoyi',    name: "fastparse".scala(), version: ver.fastparse
 
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-    testCompile group: 'junit',       name: 'junit',       version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: ver.mockito
+    testCompile group: 'junit',       name: 'junit',       version: ver.junit.main
 }
