--- a/okapi-neo4j-io-testing/build.gradle
+++ b/okapi-neo4j-io-testing/build.gradle
@@ -5,5 +5,5 @@ dependencies {
     compile project(':okapi-neo4j-io')
     compile project(':okapi-testing')
 
-    compile group: 'org.neo4j.test', name: 'neo4j-harness', version: '3.4.10'
+    compile group: 'org.neo4j.test', name: 'neo4j-harness', version: ver.neo4j.main
 }
