--- a/okapi-neo4j-io/build.gradle
+++ b/okapi-neo4j-io/build.gradle
@@ -4,5 +4,5 @@ description = 'Okapi - Neo4j IO'
 dependencies {
     compile project(':okapi-api')
 
-    compile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: '1.7.2'
+    compile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: ver.neo4j.driver
 }
