--- a/okapi-trees/build.gradle
+++ b/okapi-trees/build.gradle
@@ -2,7 +2,7 @@
 description = 'Okapi Trees - Tree rewriting framework for Okapi'
 
 dependencies {
-    compile group: 'org.typelevel', name: "cats-core_$scalaVersion", version: '1.0.1'
+    compile group: 'org.typelevel', name: "cats-core".scala(), version: ver.cats
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: ver.junit.main
 }
