--- a/spark-cypher-examples/build.gradle
+++ b/spark-cypher-examples/build.gradle
@@ -5,8 +5,8 @@ dependencies {
     compile project(':spark-cypher')
     compile project(':spark-cypher-testing')
 
-    compile group: 'org.apache.spark', name: "spark-graphx_$scalaVersion", version: '2.2.2'
-    compile group: 'org.neo4j.test',   name: 'neo4j-harness',              version: '3.4.10'
-    compile group: 'io.netty',         name: 'netty-all',                  version: '4.1.24.Final'
-    compile group: 'com.h2database',   name: 'h2',                         version: '1.4.196'
+    compile group: 'org.apache.spark', name: "spark-graphx".scala(), version: ver.spark
+    compile group: 'org.neo4j.test',   name: 'neo4j-harness',        version: ver.neo4j.main
+    compile group: 'io.netty',         name: 'netty-all',            version: ver.netty
+    compile group: 'com.h2database',   name: 'h2',                   version: ver.h2
 }
